2004-11-29  Matthias Clasen  <mclasen@redhat.com>

	Determine the direction of XKB groups from their content, 
	not by looking for hardcoded keymap names.  (#116626, patch by 
	Behdad Esfahbod, based on an earlier patch by Ilya Konstantinov)
	
	* gdk/x11/gdkkeys-x11.c (struct _GdkKeymapX11): Cache directions
	for XKB groups.
	(get_direction): Determine direction of group by looking at 
	directions of keysyms.
	(update_direction): Maintain the cache of group directions.
	(gdk_keymap_get_direction): Use update_direction().

	* gdk/gdkkeynames.c: Add dead_hook and dead_horn.

	* gdk/gdkkeysyms.h (GDK_dead_hook, GDK_dead_horn): Define
	these keysyms.  (#159739, Samuel Thibault)

2004-11-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/Makefile.am (gtkalias.h): 
	* gdk/Makefile.am (gdkalias.h): Use the perl found by 
	configure.  (#149826, Morten Welinder)

2004-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwidget.h (gtk_requisition_get_type): 
	* gtk/gtktypeutils.h (gtk_identifier_get_type): 
	* gtk/gtktexttag.h (gtk_text_attributes_get_type): 
	* gtk/gtkstyle.h (gtk_border_get_type): 
	* gtk/gtkfilesystemmodel.h (_gtk_file_system_model_get_type): 
	* gtk/gtkfilechooserentry.h (_gtk_file_chooser_entry_get_type): 
	* gtk/gtkfilechooserembed.h (_gtk_file_chooser_embed_get_type):
	* gtk/gtkfilechooserdefault.h (_gtk_file_chooser_default_get_type): 
	* gtk/gtkaccelmap.h (gtk_accel_map_get_type): Mark as const.

	* gtk/gtk.symbols: 
	* gtk/Makefile.am: Mark get_type() functions
	generated by glib-mkenums as const.

	* gdk/gdkvisual.h (gdk_visual_get_type): 
	* gdk/gdkscreen.h (gdk_screen_get_type): 
	* gdk/gdkinput.h (gdk_device_get_type): 
	* gdk/gdk.h (gdk_rectangle_get_type): 
	* gdk/gdkfont.h (gdk_font_get_type): 
	* gdk/gdkevents.h (gdk_event_get_type): 
	* gdk/gdkdrawable.h (gdk_drawable_get_type): 
	* gdk/gdkdisplay.h (gdk_display_get_type): 
	* gdk/gdkcursor.h (gdk_cursor_get_type): 
	* gdk/gdkcolor.h (gdk_color_get_type): Mark as const.
