@@ -4089,7 +4089,6 @@ gtk_cell_view_set_displayed_row
 gtk_cell_view_get_displayed_row
 gtk_cell_view_get_size_of_row
 gtk_cell_view_set_background_color
-gtk_cell_view_set_cell_data
 gtk_cell_view_get_cell_renderers
 <SUBSECTION Standard>
 GtkCellViewClass
