@@ -279,7 +279,6 @@ gtk_cell_view_new_with_markup
 gtk_cell_view_new_with_pixbuf
 gtk_cell_view_new_with_text
 gtk_cell_view_set_background_color
-gtk_cell_view_set_cell_data
 gtk_cell_view_set_displayed_row
 gtk_cell_view_set_model
 gtk_cell_view_set_value
